# atg-data-scripts

./: LICENSE  README.md
scripts/: pyproject.toml
scripts/data-manipulation/: README.md  add_links.py  check_links.py  convert_regions.py  fix_factions.py  log.txt  redo_ids.py  scrape_info.py
