[project]
name = "data-scripts"
version = "0.1.0"
description = "Data manipulation scripts for Azeroth Tour Guide"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3,<5.0.0",
    "requests>=2.32.3,<3.0.0"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"